developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/OJSERLIB__VEDA_Directorship__c.object-meta.xml
<CustomObject>
    <label>VEDA Directorship</label>
    <nameField>
        <displayFormat>VD-{0000}</displayFormat>
        <label>VEDA Directorships Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Directorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>