developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Date_Appointed__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Date_Appointed__c</fullName>
    <label>Date Appointed</label>
    <type>Date</type>
</CustomField>