developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Date_Ceased__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Date_Ceased__c</fullName>
    <label>Date Ceased</label>
    <type>Date</type>
</CustomField>