developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Date_Disqualified_Until__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Date_Disqualified_Until__c</fullName>
    <label>Date Disqualified Until</label>
    <type>Date</type>
</CustomField>