developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Date_Lastknown_as_Director__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Date_Lastknown_as_Director__c</fullName>
    <label>Date Lastknown as Director</label>
    <type>Date</type>
</CustomField>