developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Disqualified_Directorships__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Disqualified_Directorships__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disqualified Directorships</label>
    <type>Checkbox</type>
</CustomField>