developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Last_Update_Date__c</fullName>
    <label>Last Update Date</label>
    <type>Date</type>
</CustomField>