developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Organisation_Bureau_Reference__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Bureau_Reference__c</fullName>
    <label>Organisation Bureau Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>