developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Organisation_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Code__c</fullName>
    <label>Organisation Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>