developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Organisation_Status__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Status__c</fullName>
    <label>Organisation Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>