developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>