developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Directorship__c/fields/OJSERLIB__Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Type__c</fullName>
    <label>Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>